Merged jdk22-migration branch