@@ -17,9 +17,8 @@
  */
 package com.slytechs.jnetpcap.pro.internal;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.nio.ByteBuffer;
 import java.util.Objects;
 import java.util.concurrent.TimeoutException;
@@ -114,7 +113,7 @@ public class AbstractPacketDispatcher extends AbstractPcapDispatcher implements 
 	}
 
 	@Override
-	public <U> Packet processPacket(MemoryAddress pcapHdr, MemoryAddress pktData, MemorySession session) {
+	public <U> Packet processPacket(MemorySegment pcapHdr, MemorySegment pktData, Arena session) {
 		return packetDispatcher.processPacket(pcapHdr, pktData, session);
 	}
 
